# nixpacks

examples/rust-cargo-workspaces/: Cargo.toml
examples/rust-cargo-workspaces/binary/: Cargo.toml
