[workspace.package]
version= "0.18.1"
edition = "2021"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"
repository = "https://github.com/LemmyNet/lemmy"

[package]
name= "rust-cargo-workspaces"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
doctest = false

[profile.release]
debug = 0
lto = "thin"

[profile.dev]
debug = 0

[workspace]
members = [
    "binary",
    "library",
]

[workspace.dependencies]
diesel = { version="2.1.0", default-features=false, features=[]}

